[package]
name = "find-sqlite"
version = "0.2.0"
edition = "2021"
description = "SQLite DB file finder"
repository = "https://github.com/xandkar/sqlite-finder"
authors = ["Siraaj Khandkar <siraaj@khandkar.net>"]
keywords = ["sqlite", "finder"]
categories = ["command-line-utilities"]
license-file = "LICENSE"
readme = "README.md"

[dependencies]
anyhow = { version = "1.0.94", features = ["backtrace"] }
clap = { version = "4.5.23", features = ["derive"] }
rayon = "1.10.0"
rusqlite = "0.32.1"
sqlformat = "0.3.3"
walkdir = "2.5.0"
